<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".CalculatorActivity">

    <Button
        android:id="@+id/bt0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt8" />

    <TextView
        android:id="@+id/calculator_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/frame"
        android:elevation="24dp"
        android:gravity="end"
        android:padding="5dp"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculator_display" />

    <Button
        android:id="@+id/bt2"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/_2"
        app:layout_constraintBottom_toBottomOf="@+id/bt1"
        app:layout_constraintEnd_toStartOf="@+id/bt3"
        app:layout_constraintStart_toEndOf="@+id/bt1"
        app:layout_constraintTop_toBottomOf="@+id/calculator_display"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/bt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculator_display" />

    <Button
        android:id="@+id/bt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt2" />

    <Button
        android:id="@+id/bt5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/_5"
        app:layout_constraintEnd_toStartOf="@+id/bt6"
        app:layout_constraintStart_toEndOf="@+id/bt4"
        app:layout_constraintTop_toBottomOf="@+id/bt2" />

    <Button
        android:id="@+id/bt6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt2" />

    <Button
        android:id="@+id/bt7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt5" />

    <Button
        android:id="@+id/bt8"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/_8"
        app:layout_constraintEnd_toStartOf="@+id/bt9"
        app:layout_constraintStart_toEndOf="@+id/bt7"
        app:layout_constraintTop_toBottomOf="@+id/bt5" />

    <Button
        android:id="@+id/bt9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt5" />

    <Button
        android:id="@+id/btAdd"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt0" />

    <Button
        android:id="@+id/btSub"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/sub"
        app:layout_constraintStart_toEndOf="@+id/btAdd"
        app:layout_constraintTop_toBottomOf="@+id/bt0" />

    <Button
        android:id="@+id/btMult"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/mult"
        app:layout_constraintEnd_toStartOf="@+id/btIs"
        app:layout_constraintTop_toBottomOf="@+id/bt0" />

    <Button
        android:id="@+id/btDiv"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/div"
        app:layout_constraintEnd_toStartOf="@+id/btMult"
        app:layout_constraintStart_toEndOf="@+id/btSub"
        app:layout_constraintTop_toBottomOf="@+id/bt0" />

    <Button
        android:id="@+id/btIs"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/is"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt0" />

    <Button
        android:id="@+id/btClearLast"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:text="@string/clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btDiv" />

    <Button
        android:id="@+id/btClearAll"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="12dp"
        android:text="@string/all"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btClearLast"
        app:layout_constraintTop_toBottomOf="@+id/btDiv" />

    <Button
        android:id="@+id/btHistory"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/his"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/frameHistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        android:visibility="gone">

        <ListView
            android:id="@+id/list_of_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>

</android.support.constraint.ConstraintLayout>